--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -9,6 +9,11 @@
   rel="stylesheet"
 />
 
+<style>
+  * {
+    font-family: Lexend Deca, sans-serif;
+  }
+</style>
 <!-- Or you can load custom head-tag JavaScript: -->
 
 <!--<script src="https://use.typekit.net/xxxyyy.js"></script>-->
